--- a/src/app/modules/deck-builder/library-section/library-section.component.html
+++ b/src/app/modules/deck-builder/library-section/library-section.component.html
@@ -135,6 +135,9 @@
       [(bloodCostSlider)]="bloodCostSlider" (bloodCostSliderChange)="onChangeBloodCostSliderFilter($event)"
       [(poolCostSlider)]="poolCostSlider" (poolCostSliderChange)="onChangePoolCostSliderFilter($event)"
       [(title)]="title" (titleChange)="onChangeTitleFilter($event)" [(cardText)]="cardText"
-      (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)" />
+      (cardTextChange)="onChangeCardTextFilter($event)" [(set)]="set" (setChange)="onChangeSetFilter($event)"
+      [predefinedLimitedFormat]="predefinedLimitedFormat"
+      (predefinedLimitedFormatChange)="onChangePredefinedLimitedFormatFilter($event)" [artist]="artist"
+      (artistChange)="onChangeArtistFilter($event)" />
   </ng-template>
 </ng-container>
