--- a/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
+++ b/src/app/modules/deck-builder/crypt-builder-filter/crypt-builder-filter.component.html
@@ -17,11 +17,6 @@
     </div>
   </div>
   }
-  <div class="form-floating my-2">
-    <input type="text" class="form-control" id="deckCardText" [placeholder]="t('card_text_placeholder')"
-      [formControl]="cardTextControl" />
-    <label for="deckCardText" class="text-primary">{{ t('card_text') }}</label>
-  </div>
   <label for="clans" class="form-label text-primary fw-bold">{{ t('clans') }}</label>
   <div id="clans" class="row g-1">
     <app-clan-filter [(clans)]="clans" (clansChange)="onChangeClanFilter($event)" />
@@ -53,6 +48,19 @@
         showTicksValues: true
       }" [formControl]="capacitySliderControl" />
   </div>
+  @if ( limitedFormat === undefined ) {
+  <div class="row g-1 form-floating mt-2">
+    <select class="form-select" id="limitedFormatSelect" [formControl]="predefinedLimitedFormatControl">
+      <option selected></option>
+      @for (format of (predefinedLimitedFormats$ | async); track format.id) {
+      <option [value]="format.id">
+        {{ format.name }}
+      </option>
+      }
+    </select>
+    <label for="limitedFormatSelect">{{ t('limited_format') }}</label>
+  </div>
+  }
   <div class="row g-1 form-floating mt-2">
     <select class="form-select" id="set" [formControl]="setControl">
       <option selected></option>
@@ -100,6 +108,16 @@
       }
     </select>
     <label for="path">{{ t('path') }}</label>
+  </div>
+  <div class="form-floating my-2">
+    <input type="text" class="form-control" id="deckCardText" [placeholder]="t('card_text_placeholder')"
+      [formControl]="cardTextControl" />
+    <label for="deckCardText" class="text-primary">{{ t('card_text') }}</label>
+  </div>
+  <div class="form-floating my-2">
+    <input type="text" class="form-control" id="artist" [placeholder]="t('artist_placeholder')"
+      [formControl]="artistControl" />
+    <label for="artist" class="text-primary">{{ t('artist') }}</label>
   </div>
   <label for="taints" class="form-label text-primary fw-bold mt-2">{{ t('taints') }}</label>
   <form [formGroup]="taintGroup" id="taints" class="row g-1 form-floating">
