fix: update text color for artist separator in card info component

--- a/src/app/modules/deck-shared/card-info/card-info.component.html
+++ b/src/app/modules/deck-shared/card-info/card-info.component.html
@@ -18,7 +18,7 @@
       {{ artist }}
     </a>
     @if(!last) {
-    <span class="text-dark mx-1">•</span>
+    <span class="text-black mx-1">•</span>
     }
     }
   </p>
