fix: handle non-existing users in public profile; add user not found messages in multiple languages

--- a/src/app/modules/user/user-public-profile/user-public-profile.component.html
+++ b/src/app/modules/user/user-public-profile/user-public-profile.component.html
@@ -15,7 +15,7 @@
                 @if( isSupporter() ) {
                 <i class="bi bi-patch-check-fill text-primary" [title]="'shared.supporter' | transloco"></i>
                 }
-                @if(username()){
+                @if(user() && username()){
                 <app-user-follow-button [username]="username()" />
                 }
               </h2>
