--- a/src/app/modules/deck/deck.component.scss
+++ b/src/app/modules/deck/deck.component.scss
@@ -113,6 +113,10 @@
 div.costx {
   font-size: 30px;
   display: inline-block;
+
+  @media (max-width: 768px) {
+    font-size: 24px;
+  }
 }
 div.costx i {
   vertical-align: middle;
@@ -134,9 +138,9 @@ span.circle_number {
 
   @media (max-width: 768px) {
     font-size: 20px;
-    width: 32px;
-    height: 32px;
-    line-height: 30px;
+    width: 40px;
+    height: 40px;
+    line-height: 39px;
   }
 }
 
