--- a/src/app/modules/deck-card/deck-card.component.html
+++ b/src/app/modules/deck-card/deck-card.component.html
@@ -1,6 +1,7 @@
 @if(deck(); as deck){
-<a [routerLink]="'/deck/' + deck.id" class="text-decoration-none">
-  <div class="deck-card border border-2 rounded-2 hover-shadow my-1 position-relative d-flex flex-column" [ngClass]="{
+<a [routerLink]="'/deck/' + deck.id" (click)="onDeckClick()" class="text-decoration-none">
+  <div [id]="deck.id" class="deck-card border border-2 rounded-2 hover-shadow my-1 position-relative d-flex flex-column"
+    [ngClass]="{
     'border-secondary-subtle': !deck.owner,
     'border-primary': deck.owner
   }" [ngStyle]="{'min-height':height()}">
