feat: add global search bar for cards, decks, and users; implement search functionality and UI components

--- a/src/app/modules/user/user-public-profile/user-public-profile.component.html
+++ b/src/app/modules/user/user-public-profile/user-public-profile.component.html
@@ -13,8 +13,9 @@
               <h2 class="mb-1">
                 {{ user()?.displayName || username()}}
                 @if( isSupporter() ) {
-                <i class="bi bi-patch-check-fill text-primary" [title]="'shared.supporter' | transloco"></i>
+                <i class="bi bi-patch-check-fill text-primary me-2" [title]="'shared.supporter' | transloco"></i>
                 }
+                <span class="text-muted fs-5">(@{{ user()?.user }})</span>
                 @if(user() && username()){
                 <app-user-follow-button [username]="username()" />
                 }
