--- a/src/app/shared/components/search-bar/search-bar.component.html
+++ b/src/app/shared/components/search-bar/search-bar.component.html
@@ -4,7 +4,7 @@
       <span class="input-group-text" id="basic-addon1">
         <i class="bi bi-search"></i>
       </span>
-      <input class="form-control me-2" type="search" [placeholder]="t('search_placeholder')"
+      <input class="form-control" type="search" [placeholder]="t('search_placeholder')"
         [attr.aria-label]="t('search_placeholder')" [formControl]="queryControl" (keydown)="onKeydown($event)" />
     </div>
   </div>
