--- a/src/app/modules/user/user-public-profile/user-public-profile.component.html
+++ b/src/app/modules/user/user-public-profile/user-public-profile.component.html
@@ -9,17 +9,22 @@
               <img [src]="user()?.profileImage || '/assets/img/default_user.png'"
                 [alt]="user()?.displayName || username()" class="rounded-circle" width="80" height="80">
             </div>
+            @if(user(); as user){
             <div>
-              <h2 class="mb-1">
-                {{ user()?.displayName || username()}}
+              <h2 class="mb-0">
+                {{ user.displayName }}
+
                 @if( isSupporter() ) {
-                <i class="bi bi-patch-check-fill text-primary" [title]="'shared.supporter' | transloco"></i>
+                <i class="bi bi-patch-check-fill text-primary me-2" [title]="'shared.supporter' | transloco"></i>
                 }
-                @if(username()){
+                @if(user && username()){
                 <app-user-follow-button [username]="username()" />
                 }
               </h2>
-              <p class="text-muted mb-2">
+              <p class="text-muted fs-6 my-1">
+                @{{ user.user }}
+              </p>
+              <p class="text-muted my-1">
                 <i class="bi bi-stack me-1"></i>
                 {{ (total$ | async) || 0 }} {{ ((total$ | async) || 0) === 1 ? t('deck') : t('decks') }}
               </p>
@@ -30,7 +35,7 @@
                   <span class="text-muted ms-1">{{ t('followers') }}</span>
                   <ng-template #followersPopover>
                     <ng-container *ngTemplateOutlet="userListTemplate; context: {
-                      users: user()?.followers,
+                      users: user.followers,
                       count: followersCount(),
                       emptyMessage: t('no_followers'),
                       popover: followersBtn
@@ -43,7 +48,7 @@
                   <span class="text-muted ms-1">{{ t('following') }}</span>
                   <ng-template #followingPopover>
                     <ng-container *ngTemplateOutlet="userListTemplate; context: {
-                      users: user()?.following,
+                      users: user.following,
                       count: followingCount(),
                       emptyMessage: t('no_following'),
                       popover: followingBtn
@@ -51,7 +56,6 @@
                   </ng-template>
                 </span>
               </div>
-
               <!-- Reusable user list template -->
               <ng-template #userListTemplate let-users="users" let-count="count" let-emptyMessage="emptyMessage"
                 let-popover="popover">
@@ -71,6 +75,7 @@
               </ng-template>
 
             </div>
+            }
           </div>
         </div>
       </div>
