--- a/src/app/modules/deck-shared/library-card/library-card.component.html
+++ b/src/app/modules/deck-shared/library-card/library-card.component.html
@@ -23,7 +23,7 @@
         }
         @if(!(isMobile$ | async)! && card.sets && card.sets.length > 1) {
         <div class="d-flex flex-wrap my-2 justify-content-center align-items-center">
-          @for (set of card.sets; track set) {
+          @for (set of card.sets; track $index) {
           <span class="badge me-1"
             [ngClass]="{ 'text-bg-secondary': activeSet !== set, 'text-bg-primary border border-primary border-1': activeSet === set }"
             tabindex="0" (click)="setActiveSet(set)" [title]="set" role="button">{{ set }}</span>
@@ -34,7 +34,7 @@
       <div class="modal-right-body col-sm-12 col-md-7 ps-0">
         <div class="modal-header">
           <h4 class="modal-title d-flex align-items-center">
-            @for (typeIcon of card.typeIcons; track typeIcon) {
+            @for (typeIcon of card.typeIcons; track $index) {
             <i class="vtes vtes-big float-start" [ngClass]="typeIcon"></i>
             }
             @if(card.path){
@@ -94,13 +94,13 @@
             'poolcost': card.poolCost > 6
           }"></i>
               }
-              @for (discipline of card.disciplineIcons; track discipline) {
+              @for (discipline of card.disciplineIcons; track $index) {
               <i class="vtes float-end me-1" [ngClass]="discipline"></i>
               }
               @if (card.burn) {
               <i class="vtes float-end burnoption me-1"></i>
               }
-              @for (clanIcon of card.clanIcons; track clanIcon) {
+              @for (clanIcon of card.clanIcons; track $index) {
               <i class="vtes float-end me-1" [ngClass]="clanIcon"></i>
               }
 
@@ -119,7 +119,7 @@
               <i class="bi bi-search"></i> {{ t('search') }}
             </button>
 
-            @for (shop of cardInfo?.shopList; track shop) {
+            @for (shop of cardInfo?.shopList; track shop.link) {
             @if(shop.inStock && shop.shopInfo.showButton){
             <a type="button" class="btn btn-sm btn-success col-auto me-1"
               [title]="t('buy', { name: shop.shopInfo.fullName })" [href]="shop.link" target="_blank" gaEvent="purchase"
