--- a/src/app/modules/collection/preconstructed-deck-modal/preconstructed-deck-modal.component.html
+++ b/src/app/modules/collection/preconstructed-deck-modal/preconstructed-deck-modal.component.html
@@ -54,11 +54,11 @@
             </div>
             <div class="ms-3">
               <div class="input-group">
-                <input type="number" class="form-control copies-input" [formControl]="getDeckCopiesControl(deck.id)"
-                  min="1" max="9" title="{{ t('number_of_copies') }}" [disabled]="(addingCards$ | async) ?? false">
-                <button type="button" class="btn btn-primary" [disabled]="(addingCards$ | async) ?? false"
+                <input #copiesInput type="number" class="form-control copies-input"
+                  [formControl]="getDeckCopiesControl(deck.id)" min="1" max="9" title="{{ t('number_of_copies') }}">
+                <button type="button" class="btn btn-primary" [disabled]="copiesInput.disabled"
                   (click)="onAddDeckToCollection(deck)">
-                  @if (addingCards$ | async) {
+                  @if (copiesInput.disabled) {
                   <span class="spinner-border spinner-border-sm me-2" role="status"></span>
                   }
                   {{ t('add_to_collection') }}
